# Foam-Yade

./: .gitignore  ChangeLog.template  README.md  readme.md  yade install (2).docx  yade install.docx
FoamYade_lambda_box/: MPI_lambda_backup.py  particleCellMapping.txt
FoamYade_lambda_box/constant/: transportProperties
FoamYade_lambda_box/system/: decomposeParDict
FoamYade_lambda_box_case/: MPI_lambda.py  run.sh
FoamYade_lambda_box_case/system/: blockMeshDict  controlDict
FoamYade_lambda_box_lambdaDotModel/0_org/: nParicles
FoamYade_lambda_box_lambdaDotModel/constant/: lambdaDict
FoamYade_lambda_box_lambdaDotModel_case/: Allclean  MPI_lambda.py  equations.odt
FoamYade_lambda_box_lambdaDotModel_case/0_org/: U
cMake/: FindCholmod.cmake  FindCuBlas.cmake
core/: Body.cpp  BodyContainer.cpp  Callbacks.hpp  Cell.hpp  Engine.cpp  ForceContainer.hpp  MPIBodyContainer.cpp  PartialEngine.hpp  SimulationFlow.hpp  Subdomain.cpp  ThreadRunner.cpp  ThreadWorker.hpp  TimeStepper.hpp
doc/: yade-conferences.bib
doc/sphinx/: HydroForceEngine.rst  bib2rst.py  citing.rst  consulting.rst  ipython_directive.py  ipython_directive012.py  potentialparticles.rst  publications.rst.in  sitecustomize.py  tutorial-more-examples.rst  tutorial-short-course-intro.rst  yadeTechArchive.rst
examples/: ResetRandomPosition.py  SlicedProfiles.py  ViscElMatchMaker.py  bouncingbubble.py  funnel.py  spheresFactory.py  timeStepperUsage.py
examples/DEM2020Benchmark/: Case1_SiloFlow.py
examples/FEMxDEM/: footing.msh  prepareRVE.py
examples/FluidCouplingPFV/: TwoPhaseFlowInjection.py  alphaShape.py  drainage-2PFV-Yuan_and_Chareyre_2017.py
examples/FluidCouplingVANS1D/: INFO
examples/Lubrication/: sedimentingSphere_withPotential.py
examples/PeriodicBoundaries/: peri3dController_shear.py  periodic-grow.py
examples/PotentialBlocks/: ExamplePotentialBlock_PostSlide.tif  WedgeYADE.py  cubePBscaled.py  multidrum_column.py
examples/PotentialParticles/: cubePPscaled.py
examples/ThermalEngine/: flowScenario.py  noFlowScenario.py  thermoHydroMechanical_coupling.py
examples/WireMatPM/: wirepackings.py  wiretensiltest.py
examples/adaptiveintegrator/: simple-scene-plot-RungeKuttaCashKarp54.py
examples/agglomerate/: compress.py  divide.py  makeCloud.py  simulation.py
examples/alphaShapes/: mixedAlphaBox.py
examples/capillary/: capillar.py
examples/capillaryLaplaceYoung/: triaxCapillarityDelaunay.py
examples/clumps/: clump-inbox-viscoelastic.py
examples/clumps-breakage/: Readme
examples/concrete/: interaction-histogram.py
examples/cylinders/: bendingbeams.py  mikado.py
examples/deformableelem/: main.py
examples/grids/: Simple_Grid_Falling.py
examples/gts-horse/: gts-random-pack-obb.py  gts-random-pack.py
examples/jointedCohesiveFrictionalPM/: identificationSpheresOnJoint.py  packInGtsSurface.py  persistentPlane30Deg.stl
examples/levelSet/: README.md  pvVisu.py  ramFP.py
examples/mpi/: parallelBodyInsert3D.py  reallocateBodies.py  testMPI_2D_MergeCPP.py  testMPI_2D_interactive_without_initialize.py  vtkRecorderExample.py
examples/not-working/: triax-identical-results.py
examples/oar/: job.sh  params.table
examples/pfacet/: mesh-pfacet.py
examples/polyhedra/: clump.py  free-fall.py  horse.py  splitter.py
examples/ring2d/: ringSimpleViscoelastic.py
examples/rod-penetration/: rod-coarse.stl
examples/simple-scene/: save-then-reload.py  simple-scene-plot.py  simple-scene.py
examples/sph/: dam_break.py  toystar.py  watercolumn.py
examples/test/: beam-l6geom.py  callback.py  clump-facet.py  clumpPack.py  collider-stride.py  combined-kinematic-engine.py  energy.py  facet-box.py  facet-sphere.py  mindlin.py  pack-cloud.py  psd.py  remove-body.py  sphere-sphere-ViscElBasic-peri.py  test_Ip2_FrictMat_CpmMat_FrictPhys.py  triax-basic.py
examples/tetra/: oneTetra.py
examples/triax-tutorial/: script-session1.py
examples/triple-pendulum/: triple-pendulum.py
examples/viscoelastic-supports/: single-element.py
gui/qt5/: GLViewerMouse.cpp  Inspector.py  OpenGLManager.cpp  OpenGLManager.hpp  SerializableEditor.py
lambdaDotModel_solver/: lambdaDotModel.C
lambdaDotModel_solver/Make/: files
lambdaFoamYade_testSolver/: lambdaFoamYade.C
lib/base/: Logging.cpp  Math.cpp
lib/compatibility/: VTKCompatibility.cpp
lib/computational-geometry/: Hull2d.hpp
lib/factory/: ClassFactory.cpp
lib/opengl/: GLUtils.hpp
py/: WeightedAverage2d.cpp  domaindecomposition.py  mpy.py  plot.py  post2d.py  potential_utils.py  ymport.py
scripts/: python-formatter.sh
yade-trunk/: .clang-format  .gitlab-ci.yml  .gitmodules  .mailmap  CMakeLists.txt  ChangeLog  README.rst
yade-trunk/gui/: CMakeLists.txt
yade-trunk/gui/qt5/: GLViewer.hpp  GLViewerDisplay.cpp  _GLViewer.cpp  __init__.py
yade-trunk/py/: CMakeLists.txt  _extraDocs.py  _log.cpp  _utils.hpp  _ymport.cpp  bf.py  bisectionDecomposition.py  bodiesHandling.py  coloring.py  deformableelementsutils.py  geom.py  gridpfacet.py  libVersions.py.in  linterpolation.py  log.py  params.py  polyhedra_utils.py  remote.py  system.py  utils.py  yexecfile.py
yade-trunk/py/FEMxDEM/: mpipool.py  msFEMup.py  saveGauss.py
yade-trunk/py/high-precision/: _ExposeBoxes.cpp  _ExposeComplex2.cpp  _ExposeQuaternion.cpp  _ExposeStorageOrdering.cpp  _ExposeStorageOrdering.hpp  _ExposeVectors1.cpp  _RealHPDiagnostics.hpp  math.py
yade-trunk/py/high-precision/minieigen/: ComplexVisitor.hpp  common.hpp  expose.hpp  visitors.hpp
yade-trunk/py/pack/: _packPredicates.cpp  _packSpheres.cpp  pack.py
yade-trunk/py/tests/: clump.py  cohesive-chain.py  core.py  dummyTest.py  engines.py  enumTest.py  libVersions.py  pbc.py  testMath.py  testMinieigenHP.py  wrapper.py  ymport-foamfiles.py
yade-trunk/py/tests/ymport-files/: blockMeshDict
yade-trunk/py/tests/ymport-files/polyMesh/: faces  owner  points
yade-trunk/py/wrapper/: yadeWrapper.cpp
yade-trunk/py/ymport/foamfile/: BoundaryParser.cpp  BoundaryParser.hpp  FacesParser.cpp  FacesParser.hpp  Lexer.cpp  PointsParser.cpp  PointsParser.hpp  PolyMesh.cpp  Token.hpp  VerifyMacros.hpp
(+1077 files in other folders)
